# dtdc_simulator

./: .gitignore  CALIBRATION_WORKFLOW.md  DECISIONS.md  FIDELITY_GAP_ANALYSIS.md  GROUNDING_MATRIX.md  GUI_AUDIT.md  LICENSE  PLACE_PARAMETER_AUDIT.md  SOLVER_PERFORMANCE_EVALUATION.md  envelope.yaml  pyproject.toml
app_specifications/: DTDC_Digital_Twin_Modeling_Overview.md  DTDC_Equipment_Envelope.md  DTDC_Simulator_BuildSpec.md  DTDC_default_parameters.yaml  DTDC_steady_state_reference.md
benchmarks/: coamo_industrial.yaml  solver_performance.yaml
benchmarks/results/: deduplicated2_realtime_32.csv  deduplicated2_reference_32.csv  deduplicated2_reference_32_repeat.csv  deduplicated_reference_32.csv  diagnostic_reference_32.csv  diagnostic_reference_32_cellroot.csv  diagnostic_reference_32_guess.csv  fixed_cross_mesh_32.csv  jit_realtime_32.csv  jit_reference_32.csv  profile_reference_32.csv  profile_reference_32_relaxation.csv  realtime_throughput.csv  (+5 more)
properties/: soybean.yaml
scenarios/: soybean_default.yaml
scripts/: calibration_scorecard.py  industry_benchmark.py  place_parameter_sensitivity.py  solver_performance.py
tests/: test_balance.py  test_benchmark.py  test_clock.py  test_config.py  test_dc.py  test_dcz.py  test_design_rules.py  test_dt_profiles.py  test_dt_solver.py  test_envelope.py  test_facade.py  test_ftrz.py  test_model.py  test_mv_arbitration.py  test_opcua.py  test_opcua_browser.py  test_opcua_service.py  test_opcua_superset.py  test_particle.py  test_performance.py  test_phz.py  test_scaffold.py  test_thermo.py  test_ui_controls.py
(+43 files in other folders)
